Adding web.conf && modifing the Dockerfile & entrypoint.sh